kernel v6.11-rc3-bone0.1 rebase external git projects BBDTBS: https://openbeagle.org/beagleboard/BeagleBoard-DeviceTrees/-/commit/d0b61aee5d107b63d91807fb40c79e15a82a30bb WIRELESS_REGDB: https://git.kernel.org/pub/scm/linux/kernel/git/wens/wireless-regdb.git/commit/?id=218d1460e046a55d320620823f7bd5de9881e131 WPANUSB: https://openbeagle.org/beagleconnect/linux/wpanusb/-/commit/6aa9bf65b9d88a2c9a111e7b4aed03de2be9413d
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/patches/ref_omap2plus_defconfig
+++ b/patches/ref_omap2plus_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 6.10.3 Kernel Configuration
+# Linux/arm 6.11.0-rc3 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="arm-linux-gnueabi-gcc (GCC) 13.3.0"
 CONFIG_CC_IS_GCC=y
@@ -156,7 +156,7 @@ CONFIG_CGROUPS=y
 CONFIG_PAGE_COUNTER=y
 # CONFIG_CGROUP_FAVOR_DYNMODS is not set
 CONFIG_MEMCG=y
-CONFIG_MEMCG_KMEM=y
+# CONFIG_MEMCG_V1 is not set
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
@@ -197,6 +197,8 @@ CONFIG_RD_ZSTD=y
 CONFIG_INITRAMFS_PRESERVE_MTIME=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
+# CONFIG_LD_DEAD_CODE_DATA_ELIMINATION is not set
 CONFIG_LD_ORPHAN_WARN=y
 CONFIG_LD_ORPHAN_WARN_LEVEL="warn"
 CONFIG_SYSCTL=y
@@ -231,7 +233,6 @@ CONFIG_CACHESTAT_SYSCALL=y
 CONFIG_KALLSYMS=y
 # CONFIG_KALLSYMS_SELFTEST is not set
 # CONFIG_KALLSYMS_ALL is not set
-CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_ARCH_HAS_MEMBARRIER_SYNC_CORE=y
 CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_USE_VMALLOC=y
@@ -689,6 +690,7 @@ CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_SECCOMP=y
 CONFIG_SECCOMP_FILTER=y
 # CONFIG_SECCOMP_CACHE_DEBUG is not set
+CONFIG_HAVE_ARCH_STACKLEAK=y
 CONFIG_HAVE_STACKPROTECTOR=y
 CONFIG_STACKPROTECTOR=y
 CONFIG_STACKPROTECTOR_STRONG=y
@@ -737,6 +739,7 @@ CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 
 CONFIG_HAVE_GCC_PLUGINS=y
 CONFIG_FUNCTION_ALIGNMENT=0
+CONFIG_ARCH_NEED_CMPXCHG_1_EMU=y
 # end of General architecture-dependent options
 
 CONFIG_RT_MUTEXES=y
@@ -846,6 +849,7 @@ CONFIG_COREDUMP=y
 #
 CONFIG_SWAP=y
 # CONFIG_ZSWAP is not set
+CONFIG_HAVE_ZSMALLOC=y
 CONFIG_ZSMALLOC=m
 # CONFIG_ZSMALLOC_STAT is not set
 CONFIG_ZSMALLOC_CHAIN_SIZE=8
@@ -858,6 +862,7 @@ CONFIG_SLUB=y
 CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLAB_FREELIST_RANDOM is not set
 # CONFIG_SLAB_FREELIST_HARDENED is not set
+# CONFIG_SLAB_BUCKETS is not set
 # CONFIG_SLUB_STATS is not set
 CONFIG_SLUB_CPU_PARTIAL=y
 # CONFIG_RANDOM_KMALLOC_CACHES is not set
@@ -1528,7 +1533,6 @@ CONFIG_VGA_ARB_MAX_GPUS=16
 # CONFIG_PCIE_ALTERA is not set
 # CONFIG_PCI_FTPCI100 is not set
 # CONFIG_PCI_HOST_GENERIC is not set
-# CONFIG_PCIE_MICROCHIP_HOST is not set
 # CONFIG_PCI_V3_SEMI is not set
 # CONFIG_PCIE_XILINX is not set
 
@@ -1559,6 +1563,12 @@ CONFIG_PCI_DRA7XX_EP=y
 # Mobiveil-based PCIe controllers
 #
 # end of Mobiveil-based PCIe controllers
+
+#
+# PLDA-based PCIe controllers
+#
+# CONFIG_PCIE_MICROCHIP_HOST is not set
+# end of PLDA-based PCIe controllers
 # end of PCI controller drivers
 
 #
@@ -1931,6 +1941,7 @@ CONFIG_EEPROM_93CX6=y
 # CONFIG_UACCE is not set
 # CONFIG_PVPANIC is not set
 # CONFIG_GP_PCI1XXXX is not set
+# CONFIG_KEBA_CP500 is not set
 # end of Misc devices
 
 #
@@ -2230,6 +2241,7 @@ CONFIG_NET_VENDOR_MELLANOX=y
 # CONFIG_MLX5_CORE is not set
 # CONFIG_MLXSW_CORE is not set
 # CONFIG_MLXFW is not set
+CONFIG_NET_VENDOR_META=y
 CONFIG_NET_VENDOR_MICREL=y
 # CONFIG_KS8842 is not set
 CONFIG_KS8851=y
@@ -2301,6 +2313,7 @@ CONFIG_NET_VENDOR_SYNOPSYS=y
 # CONFIG_DWC_XLGMAC is not set
 CONFIG_NET_VENDOR_TEHUTI=y
 # CONFIG_TEHUTI is not set
+# CONFIG_TEHUTI_TN40 is not set
 CONFIG_NET_VENDOR_TI=y
 CONFIG_TI_DAVINCI_EMAC=y
 CONFIG_TI_DAVINCI_MDIO=y
@@ -2461,6 +2474,7 @@ CONFIG_MDIO_BITBANG=y
 #
 # PCS device drivers
 #
+# CONFIG_PCS_XPCS is not set
 # end of PCS device drivers
 
 CONFIG_PPP=m
@@ -2610,6 +2624,7 @@ CONFIG_RTL_CARDS=m
 # CONFIG_RTL8192EE is not set
 # CONFIG_RTL8821AE is not set
 # CONFIG_RTL8192CU is not set
+# CONFIG_RTL8192DU is not set
 # CONFIG_RTL8XXXU is not set
 # CONFIG_RTW88 is not set
 # CONFIG_RTW89 is not set
@@ -3041,6 +3056,7 @@ CONFIG_SPI_BITBANG=m
 # CONFIG_SPI_CADENCE is not set
 # CONFIG_SPI_CADENCE_QUADSPI is not set
 # CONFIG_SPI_CADENCE_XSPI is not set
+# CONFIG_SPI_CH341 is not set
 # CONFIG_SPI_DESIGNWARE is not set
 CONFIG_SPI_GPIO=m
 # CONFIG_SPI_FSL_SPI is not set
@@ -3235,6 +3251,13 @@ CONFIG_GPIO_TWL4030=y
 # CONFIG_GPIO_SIM is not set
 # end of Virtual GPIO drivers
 
+#
+# GPIO Debugging utilities
+#
+# CONFIG_GPIO_SLOPPY_LOGIC_ANALYZER is not set
+# CONFIG_GPIO_VIRTUSER is not set
+# end of GPIO Debugging utilities
+
 CONFIG_W1=m
 CONFIG_W1_CON=y
 
@@ -3285,6 +3308,7 @@ CONFIG_POWER_RESET_GPIO=y
 # CONFIG_POWER_RESET_SYSCON_POWEROFF is not set
 # CONFIG_SYSCON_REBOOT_MODE is not set
 # CONFIG_NVMEM_REBOOT_MODE is not set
+# CONFIG_POWER_SEQUENCING is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 # CONFIG_GENERIC_ADC_BATTERY is not set
@@ -3307,6 +3331,7 @@ CONFIG_BATTERY_BQ27XXX_HDQ=m
 # CONFIG_BATTERY_BQ27XXX_DT_UPDATES_NVM is not set
 # CONFIG_BATTERY_MAX17040 is not set
 # CONFIG_BATTERY_MAX17042 is not set
+# CONFIG_BATTERY_MAX1720X is not set
 # CONFIG_BATTERY_MAX1721X is not set
 # CONFIG_BATTERY_TWL4030_MADC is not set
 # CONFIG_BATTERY_RX51 is not set
@@ -3350,7 +3375,6 @@ CONFIG_HWMON=m
 # CONFIG_SENSORS_AD7314 is not set
 # CONFIG_SENSORS_AD7414 is not set
 # CONFIG_SENSORS_AD7418 is not set
-# CONFIG_SENSORS_ADM1021 is not set
 # CONFIG_SENSORS_ADM1025 is not set
 # CONFIG_SENSORS_ADM1026 is not set
 # CONFIG_SENSORS_ADM1029 is not set
@@ -3421,7 +3445,6 @@ CONFIG_SENSORS_GPIO_FAN=m
 # CONFIG_SENSORS_MAX6620 is not set
 # CONFIG_SENSORS_MAX6621 is not set
 # CONFIG_SENSORS_MAX6639 is not set
-# CONFIG_SENSORS_MAX6642 is not set
 # CONFIG_SENSORS_MAX6650 is not set
 # CONFIG_SENSORS_MAX6697 is not set
 # CONFIG_SENSORS_MAX31790 is not set
@@ -3490,6 +3513,7 @@ CONFIG_SENSORS_LM75=m
 # CONFIG_SENSORS_INA2XX is not set
 # CONFIG_SENSORS_INA238 is not set
 # CONFIG_SENSORS_INA3221 is not set
+# CONFIG_SENSORS_SPD5118 is not set
 # CONFIG_SENSORS_TC74 is not set
 # CONFIG_SENSORS_THMC50 is not set
 CONFIG_SENSORS_TMP102=m
@@ -3627,6 +3651,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_88PM800 is not set
 # CONFIG_MFD_88PM805 is not set
 # CONFIG_MFD_88PM860X is not set
+# CONFIG_MFD_88PM886_PMIC is not set
 # CONFIG_MFD_MAX14577 is not set
 # CONFIG_MFD_MAX77541 is not set
 # CONFIG_MFD_MAX77620 is not set
@@ -3709,10 +3734,13 @@ CONFIG_MENELAUS=y
 # CONFIG_MFD_ROHM_BD718XX is not set
 # CONFIG_MFD_ROHM_BD71828 is not set
 # CONFIG_MFD_ROHM_BD957XMUF is not set
+# CONFIG_MFD_ROHM_BD96801 is not set
 # CONFIG_MFD_STPMIC1 is not set
 # CONFIG_MFD_STMFX is not set
 # CONFIG_MFD_ATC260X_I2C is not set
 # CONFIG_MFD_QCOM_PM8008 is not set
+# CONFIG_MFD_CS40L50_I2C is not set
+# CONFIG_MFD_CS40L50_SPI is not set
 # CONFIG_RAVE_SP_CORE is not set
 # CONFIG_MFD_INTEL_M10_BMC_SPI is not set
 # CONFIG_MFD_RSMU_I2C is not set
@@ -3952,6 +3980,7 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 #
 # Chips&Media media platform drivers
 #
+# CONFIG_VIDEO_E5010_JPEG_ENC is not set
 
 #
 # Intel media platform drivers
@@ -3985,6 +4014,11 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 #
 # Qualcomm media platform drivers
 #
+
+#
+# Raspberry Pi media platform drivers
+#
+# CONFIG_VIDEO_RASPBERRYPI_PISP_BE is not set
 
 #
 # Renesas media platform drivers
@@ -4050,6 +4084,8 @@ CONFIG_VIDEO_APTINA_PLL=m
 # CONFIG_VIDEO_ALVIUM_CSI2 is not set
 # CONFIG_VIDEO_AR0521 is not set
 # CONFIG_VIDEO_GC0308 is not set
+# CONFIG_VIDEO_GC05A2 is not set
+# CONFIG_VIDEO_GC08A3 is not set
 # CONFIG_VIDEO_GC2145 is not set
 # CONFIG_VIDEO_HI556 is not set
 # CONFIG_VIDEO_HI846 is not set
@@ -4059,6 +4095,7 @@ CONFIG_VIDEO_APTINA_PLL=m
 # CONFIG_VIDEO_IMX219 is not set
 # CONFIG_VIDEO_IMX258 is not set
 # CONFIG_VIDEO_IMX274 is not set
+# CONFIG_VIDEO_IMX283 is not set
 # CONFIG_VIDEO_IMX290 is not set
 # CONFIG_VIDEO_IMX296 is not set
 # CONFIG_VIDEO_IMX319 is not set
@@ -4114,7 +4151,7 @@ CONFIG_VIDEO_MT9P031=m
 # CONFIG_VIDEO_S5C73M3 is not set
 # CONFIG_VIDEO_S5K5BAF is not set
 # CONFIG_VIDEO_S5K6A3 is not set
-# CONFIG_VIDEO_ST_VGXY61 is not set
+# CONFIG_VIDEO_VGXY61 is not set
 # CONFIG_VIDEO_CCS is not set
 # CONFIG_VIDEO_ET8EK8 is not set
 
@@ -4254,6 +4291,8 @@ CONFIG_VIDEO_TVP5150=m
 # CONFIG_VIDEO_DS90UB913 is not set
 # CONFIG_VIDEO_DS90UB953 is not set
 # CONFIG_VIDEO_DS90UB960 is not set
+# CONFIG_VIDEO_MAX96714 is not set
+# CONFIG_VIDEO_MAX96717 is not set
 # end of Video serializers and deserializers
 
 #
@@ -4561,11 +4600,13 @@ CONFIG_DRM_PANEL=y
 # CONFIG_DRM_PANEL_FEIYANG_FY07024DI26A30D is not set
 CONFIG_DRM_PANEL_DSI_CM=m
 # CONFIG_DRM_PANEL_LVDS is not set
+# CONFIG_DRM_PANEL_HIMAX_HX83102 is not set
 # CONFIG_DRM_PANEL_HIMAX_HX83112A is not set
 # CONFIG_DRM_PANEL_HIMAX_HX8394 is not set
 # CONFIG_DRM_PANEL_ILITEK_IL9322 is not set
 # CONFIG_DRM_PANEL_ILITEK_ILI9341 is not set
 # CONFIG_DRM_PANEL_ILITEK_ILI9805 is not set
+# CONFIG_DRM_PANEL_ILITEK_ILI9806E is not set
 # CONFIG_DRM_PANEL_ILITEK_ILI9881C is not set
 # CONFIG_DRM_PANEL_ILITEK_ILI9882T is not set
 # CONFIG_DRM_PANEL_INNOLUX_EJ030NA is not set
@@ -4578,6 +4619,7 @@ CONFIG_DRM_PANEL_DSI_CM=m
 # CONFIG_DRM_PANEL_KINGDISPLAY_KD097D04 is not set
 # CONFIG_DRM_PANEL_LEADTEK_LTK050H3146W is not set
 # CONFIG_DRM_PANEL_LEADTEK_LTK500HD1829 is not set
+# CONFIG_DRM_PANEL_LINCOLNTECH_LCD197 is not set
 CONFIG_DRM_PANEL_LG_LB035Q02=m
 # CONFIG_DRM_PANEL_LG_LG4573 is not set
 # CONFIG_DRM_PANEL_LG_SW43408 is not set
@@ -4799,6 +4841,7 @@ CONFIG_BACKLIGHT_PWM=m
 # CONFIG_BACKLIGHT_QCOM_WLED is not set
 # CONFIG_BACKLIGHT_ADP8860 is not set
 # CONFIG_BACKLIGHT_ADP8870 is not set
+# CONFIG_BACKLIGHT_LM3509 is not set
 # CONFIG_BACKLIGHT_LM3630A is not set
 # CONFIG_BACKLIGHT_LM3639 is not set
 # CONFIG_BACKLIGHT_LP855X is not set
@@ -5040,6 +5083,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=m
 # CONFIG_SND_SOC_AK4458 is not set
 # CONFIG_SND_SOC_AK4554 is not set
 # CONFIG_SND_SOC_AK4613 is not set
+# CONFIG_SND_SOC_AK4619 is not set
 # CONFIG_SND_SOC_AK4642 is not set
 # CONFIG_SND_SOC_AK5386 is not set
 # CONFIG_SND_SOC_AK5558 is not set
@@ -5081,12 +5125,14 @@ CONFIG_SND_SOC_CPCAP=m
 # CONFIG_SND_SOC_CS4341 is not set
 # CONFIG_SND_SOC_CS4349 is not set
 # CONFIG_SND_SOC_CS53L30 is not set
+# CONFIG_SND_SOC_CS530X_I2C is not set
 # CONFIG_SND_SOC_CX2072X is not set
 # CONFIG_SND_SOC_DA7213 is not set
 # CONFIG_SND_SOC_DMIC is not set
 CONFIG_SND_SOC_HDMI_CODEC=m
 # CONFIG_SND_SOC_ES7134 is not set
 # CONFIG_SND_SOC_ES7241 is not set
+# CONFIG_SND_SOC_ES8311 is not set
 # CONFIG_SND_SOC_ES8316 is not set
 # CONFIG_SND_SOC_ES8326 is not set
 # CONFIG_SND_SOC_ES8328_I2C is not set
@@ -5823,6 +5869,7 @@ CONFIG_LEDS_TRIGGER_DEFAULT_ON=m
 # CONFIG_LEDS_TRIGGER_NETDEV is not set
 # CONFIG_LEDS_TRIGGER_PATTERN is not set
 # CONFIG_LEDS_TRIGGER_TTY is not set
+# CONFIG_LEDS_TRIGGER_INPUT_EVENTS is not set
 
 #
 # Simple LED drivers
@@ -6025,6 +6072,7 @@ CONFIG_VHOST_MENU=y
 # CONFIG_STAGING is not set
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
+# CONFIG_CZNIC_PLATFORMS is not set
 # CONFIG_MELLANOX_PLATFORM is not set
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_CLK_PREPARE=y
@@ -6302,6 +6350,7 @@ CONFIG_KXCJK1013=m
 # CONFIG_AD7291 is not set
 # CONFIG_AD7292 is not set
 # CONFIG_AD7298 is not set
+# CONFIG_AD7380 is not set
 # CONFIG_AD7476 is not set
 # CONFIG_AD7606_IFACE_PARALLEL is not set
 # CONFIG_AD7606_IFACE_SPI is not set
@@ -6316,7 +6365,6 @@ CONFIG_KXCJK1013=m
 # CONFIG_AD7949 is not set
 # CONFIG_AD799X is not set
 # CONFIG_AD9467 is not set
-# CONFIG_ADI_AXI_ADC is not set
 # CONFIG_CC10001_ADC is not set
 CONFIG_CPCAP_ADC=m
 # CONFIG_ENVELOPE_DETECTOR is not set
@@ -6354,6 +6402,7 @@ CONFIG_INA2XX_ADC=m
 # CONFIG_TI_ADC128S052 is not set
 # CONFIG_TI_ADC161S626 is not set
 # CONFIG_TI_ADS1015 is not set
+# CONFIG_TI_ADS1119 is not set
 # CONFIG_TI_ADS7924 is not set
 # CONFIG_TI_ADS1100 is not set
 # CONFIG_TI_ADS1298 is not set
@@ -6408,6 +6457,7 @@ CONFIG_TWL6030_GPADC=m
 # CONFIG_ATLAS_EZO_SENSOR is not set
 # CONFIG_BME680 is not set
 # CONFIG_CCS811 is not set
+# CONFIG_ENS160 is not set
 # CONFIG_IAQCORE is not set
 # CONFIG_PMS7003 is not set
 # CONFIG_SCD30_CORE is not set
@@ -6457,7 +6507,6 @@ CONFIG_IIO_ST_SENSORS_CORE=m
 # CONFIG_AD5504 is not set
 # CONFIG_AD5624R_SPI is not set
 # CONFIG_AD9739A is not set
-# CONFIG_ADI_AXI_DAC is not set
 # CONFIG_LTC2688 is not set
 # CONFIG_AD5686_SPI is not set
 # CONFIG_AD5696_I2C is not set
@@ -6647,6 +6696,7 @@ CONFIG_SENSORS_ISL29028=m
 # CONFIG_VCNL4000 is not set
 # CONFIG_VCNL4035 is not set
 # CONFIG_VEML6030 is not set
+# CONFIG_VEML6040 is not set
 # CONFIG_VEML6070 is not set
 # CONFIG_VEML6075 is not set
 # CONFIG_VL6180 is not set
@@ -6805,6 +6855,7 @@ CONFIG_PWM=y
 # CONFIG_PWM_CLK is not set
 # CONFIG_PWM_DWC is not set
 # CONFIG_PWM_FSL_FTM is not set
+# CONFIG_PWM_GPIO is not set
 CONFIG_PWM_OMAP_DMTIMER=m
 # CONFIG_PWM_PCA9685 is not set
 CONFIG_PWM_TIECAP=m
@@ -6820,6 +6871,7 @@ CONFIG_IRQCHIP=y
 CONFIG_ARM_GIC=y
 CONFIG_ARM_GIC_MAX_NR=1
 # CONFIG_AL_FIC is not set
+# CONFIG_LAN966X_OIC is not set
 CONFIG_OMAP_IRQCHIP=y
 # CONFIG_XILINX_INTC is not set
 CONFIG_IRQ_CROSSBAR=y
@@ -6873,6 +6925,8 @@ CONFIG_PHY_TI_GMII_SEL=y
 # CONFIG_ARM_CCI_PMU is not set
 # CONFIG_ARM_CCN is not set
 CONFIG_ARM_PMU=y
+CONFIG_ARM_V6_PMU=y
+CONFIG_ARM_V7_PMU=y
 # CONFIG_ARM_PMUV3 is not set
 # CONFIG_DWC_PCIE_PMU is not set
 # end of Performance monitor support
@@ -7262,7 +7316,6 @@ CONFIG_CRYPTO_ECC=m
 CONFIG_CRYPTO_ECDH=m
 # CONFIG_CRYPTO_ECDSA is not set
 # CONFIG_CRYPTO_ECRDSA is not set
-# CONFIG_CRYPTO_SM2 is not set
 # CONFIG_CRYPTO_CURVE25519 is not set
 # end of Public-key cryptography
 
@@ -7566,6 +7619,7 @@ CONFIG_GENERIC_ATOMIC64=y
 CONFIG_CLZ_TAB=y
 # CONFIG_IRQ_POLL is not set
 CONFIG_MPILIB=y
+CONFIG_DIMLIB=y
 CONFIG_LIBFDT=y
 CONFIG_OID_REGISTRY=y
 CONFIG_HAVE_GENERIC_VDSO=y
@@ -7888,7 +7942,6 @@ CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_TEST_LKM is not set
 # CONFIG_TEST_BITOPS is not set
 # CONFIG_TEST_VMALLOC is not set
-# CONFIG_TEST_USER_COPY is not set
 # CONFIG_TEST_BPF is not set
 # CONFIG_TEST_BLACKHOLE_DEV is not set
 # CONFIG_FIND_BIT_BENCHMARK is not set
