ci: grab from local mirror
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,9 @@ build:
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
-    - echo "LINUX_GIT=/mnt/yocto-cache/git/linux-src/" >> system.sh
-    - git config --global --add safe.directory /mnt/yocto-cache/git/linux-src
+    - echo "USE_LOCAL_GIT_MIRROR=1" >> system.sh
+#    - echo "LINUX_GIT=/mnt/yocto-cache/git/linux-src/" >> system.sh
+#    - git config --global --add safe.directory /mnt/yocto-cache/git/linux-src
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
     - ccache -s
