scripts: resync all build scripts
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ build:
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
+    - echo "LINUX_GIT=/opt/linux-src/" >> system.sh
     - echo "USE_LOCAL_GIT_MIRROR=1" >> system.sh
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
