--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,8 @@ build:
     - du -sh deploy/linux-image-*.deb || true
     - ccache -s
     - tar --use-compress-program=lz4 -cf ccache.tar.lz4 /root/.cache/ccache/
-  artifacts:
-    expire_in: 28 days
-    name: "$CI_PROJECT_NAME-am33x-v6.10-$CI_JOB_ID"
-    paths:
-      - "deploy/linux-image-*.deb"
+#  artifacts:
+#    expire_in: 28 days
+#    name: "$CI_PROJECT_NAME-am33x-v6.10-$CI_JOB_ID"
+#    paths:
+#      - "deploy/linux-image-*.deb"
