scripts: resync all build scripts
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 image: robertcnelson/beagle-devscripts-kernel-debian-12-amd64
-# https://git.beagleboard.org/beagleboard/ci-docker-images
+# https://openbeagle.org/beagleboard/ci-docker-images
 
 cache:
   key: "$CI_PROJECT_NAME-am33x-v6.3"
@@ -19,14 +19,14 @@ build:
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
-    - echo "LINUX_GIT=/mnt/yocto-cache/git/linux-src/" >> system.sh
-    - git config --global --add safe.directory /mnt/yocto-cache/git/linux-src
+    - echo "LINUX_GIT=/opt/linux-src/" >> system.sh
+    - echo "USE_LOCAL_GIT_MIRROR=1" >> system.sh
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
     - ccache -s
     - tar --use-compress-program=lz4 -cf ccache.tar.lz4 /root/.cache/ccache/
-  artifacts:
-    expire_in: 28 days
-    name: "$CI_PROJECT_NAME-am33x-v6.3-$CI_JOB_ID"
-    paths:
-      - "deploy/linux-image-*.deb"
+#  artifacts:
+#    expire_in: 28 days
+#    name: "$CI_PROJECT_NAME-am33x-v6.3-$CI_JOB_ID"
+#    paths:
+#      - "deploy/linux-image-*.deb"
