--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: robertcnelson/beagle-devscripts-kernel-debian-12-amd64
 # https://openbeagle.org/beagleboard/ci-docker-images
 
 cache:
-  key: "$CI_PROJECT_NAME-am33x-v6.6"
+  key: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH"
   paths:
     - dl/*.tar.xz
     - ccache.tar.lz4
@@ -27,6 +27,6 @@ build:
     - tar --use-compress-program=lz4 -cf ccache.tar.lz4 /root/.cache/ccache/
 #  artifacts:
 #    expire_in: 28 days
-#    name: "$CI_PROJECT_NAME-am33x-v6.6-$CI_JOB_ID"
+#    name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
 #    paths:
 #      - "deploy/linux-image-*.deb"
