scripts: resync all build scripts
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,14 @@
-image: robertcnelson/beagle-devscripts-kernel-debian-12-amd64
+image: robertcnelson/beagle-devscripts-kernel-debian-13-amd64
 # https://openbeagle.org/beagleboard/ci-docker-images
+
+before_script:
+  - export PATH=/usr/lib/ccache:$PATH
+  - apt-get update
+  - apt-get upgrade -yq
 
 cache:
   key: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH"
   paths:
-    - dl/*.tar.xz
     - ccache.tar.lz4
 
 build:
@@ -12,18 +16,19 @@ build:
     - docker-amd64
   stage: build
   script:
-    - sed -i -e 's:gcc_13_arm:gcc_14_arm:g' version.sh
+#    - sed -i -e 's:gcc_13_arm:gcc_14_arm:g' version.sh
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
     - tar --use-compress-program=lz4 -xf ccache.tar.lz4 -C / || true
-    - ccache -s
+    - ccache -z
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
     - echo "LINUX_GIT=/opt/linux-src/" >> system.sh
     - echo "USE_LOCAL_GIT_MIRROR=1" >> system.sh
+    - echo "CC=arm-linux-gnueabihf-" >> system.sh
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
-    - ccache -s
+    - ccache -sv
     - tar --use-compress-program=lz4 -cf ccache.tar.lz4 /root/.cache/ccache/
 #  artifacts:
 #    expire_in: 28 days
