--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ before_script:
   - export PATH=/usr/lib/ccache:$PATH
   - apt-get update
   - apt-get upgrade -yq
+  - apt-get install -yq fakeroot
 
 cache:
   key: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH"
