--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: robertcnelson/beagle-devscripts-kernel-debian-13-amd64
 
 before_script:
   - export PATH=/usr/lib/ccache:$PATH
+  - echo "Acquire::http::Proxy \"http://192.168.1.10:3142\";" > /etc/apt/apt.conf.d/00aptproxy
   - apt-get update
   - apt-get upgrade -yq
 
@@ -21,17 +22,12 @@ build:
     - mkdir -p /root/.cache/ccache/ || true
     - tar --use-compress-program=lz4 -xf ccache.tar.lz4 -C / || true
     - ccache -z
-    - cp -v system.sh.sample system.sh
-    - echo "AUTO_BUILD=1" >> system.sh
-    - echo "LINUX_GIT=/opt/linux-src/" >> system.sh
-    - echo "USE_LOCAL_GIT_MIRROR=1" >> system.sh
-    - echo "CC=arm-linux-gnueabihf-" >> system.sh
+    - cp -v system.sh.gitlab system.sh
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
     - ccache -sv
     - tar --use-compress-program=lz4 -cf ccache.tar.lz4 /root/.cache/ccache/
 #  artifacts:
-#    expire_in: 28 days
 #    name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
 #    paths:
 #      - "deploy/linux-image-*.deb"
