--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: robertcnelson/beagle-devscripts-kernel-debian-13-amd64
+image: robertcnelson/beagle-devscripts-kernel-debian-13-amd64:latest
 # https://openbeagle.org/beagleboard/ci-docker-images
 
 before_script:
@@ -6,6 +6,7 @@ before_script:
   - echo "Acquire::http::Proxy \"http://192.168.1.10:3142\";" > /etc/apt/apt.conf.d/00aptproxy
   - apt-get update
   - apt-get upgrade -yq
+  - cd /opt/linux-src/ ; git pull ; cd -
 
 cache:
   key: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH"
@@ -30,6 +31,7 @@ build:
     - ccache -sv
     - tar --use-compress-program=lz4 -cf ccache.tar.lz4 /root/.cache/ccache/
 #  artifacts:
+#    when: on_success
 #    name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
 #    paths:
 #      - "deploy/linux-image-*.deb"
