kernel v6.10.7-bone9.1 rebase external git projects BBDTBS: https://openbeagle.org/beagleboard/BeagleBoard-DeviceTrees/-/commit/ea75096f2e33a8c0d5fb1df62d891c1098fe61af WIRELESS_REGDB: https://git.kernel.org/pub/scm/linux/kernel/git/wens/wireless-regdb.git/commit/?id=bf55ed481432cbd91e05b54c5f7bccd687c69bb7 WPANUSB: https://openbeagle.org/beagleconnect/linux/wpanusb/-/commit/6aa9bf65b9d88a2c9a111e7b4aed03de2be9413d
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: robertcnelson/beagle-devscripts-kernel-debian-13-amd64
+image: robertcnelson/beagle-devscripts-kernel-debian-13-amd64:latest
 # https://openbeagle.org/beagleboard/ci-docker-images
 
 before_script:
@@ -6,6 +6,9 @@ before_script:
   - echo "Acquire::http::Proxy \"http://192.168.1.10:3142\";" > /etc/apt/apt.conf.d/00aptproxy
   - apt-get update
   - apt-get upgrade -yq
+  - cd /opt/linux-src/ ; git pull ; cd -
+#  - pip3 install --break-system-packages --root-user-action=ignore git+https://git.gfnd.rcn-ee.org/mirror/dt-schema.git@main
+#  - dt-validate --version
 
 cache:
   key: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH"
@@ -30,6 +33,7 @@ build:
     - ccache -sv
     - tar --use-compress-program=lz4 -cf ccache.tar.lz4 /root/.cache/ccache/
 #  artifacts:
+#    when: on_success
 #    name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
 #    paths:
 #      - "deploy/linux-image-*.deb"
