--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ before_script:
   - cd /opt/linux-src/ ; git pull ; cd -
 
 cache:
-  key: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH"
+  key: "$CI_PROJECT_NAME-am33x-v6.11"
   paths:
     - ccache.tar.lz4
 
