scripts: resync all build scripts
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,8 +31,13 @@ build:
     - du -sh deploy/linux-image-*.deb || true
     - ccache -sv
     - tar --use-compress-program=lz4 -cf ccache.tar.lz4 /root/.cache/ccache/
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: never
+    - when: always
 #  artifacts:
+#    expire_in: 28 days
 #    when: on_success
-#    name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
+#    name: "$CI_PROJECT_NAME-am33x-v6.10-$CI_JOB_ID"
 #    paths:
 #      - "deploy/linux-image-*.deb"
