--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,6 @@ before_script:
   - apt-get update
   - apt-get upgrade -yq
   - cd /opt/linux-src/ ; git pull ; cd -
-#  - pip3 install --break-system-packages --root-user-action=ignore git+https://git.gfnd.rcn-ee.org/mirror/dt-schema.git@main
-#  - dt-validate --version
 
 cache:
   key: "$CI_PROJECT_NAME-am33x-v6.6"
@@ -31,8 +29,13 @@ build:
     - du -sh deploy/linux-image-*.deb || true
     - ccache -sv
     - tar --use-compress-program=lz4 -cf ccache.tar.lz4 /root/.cache/ccache/
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: never
+    - when: always
 #  artifacts:
+#    expire_in: 28 days
 #    when: on_success
-#    name: "$CI_PROJECT_NAME-$CI_COMMIT_BRANCH-$CI_JOB_ID"
+#    name: "$CI_PROJECT_NAME-am33x-v6.6-$CI_JOB_ID"
 #    paths:
 #      - "deploy/linux-image-*.deb"
