--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,16 @@
-image: robertcnelson/beagle-devscripts-kernel-debian-12-amd64
-# https://git.beagleboard.org/beagleboard/ci-docker-images
+image: robertcnelson/beagle-devscripts-kernel-debian-12-amd64:latest
+# https://openbeagle.org/beagleboard/ci-docker-images
+
+before_script:
+  - export PATH=/usr/lib/ccache:$PATH
+  - echo "Acquire::http::Proxy \"http://192.168.1.10:3142\";" > /etc/apt/apt.conf.d/00aptproxy
+  - apt-get update
+  - apt-get upgrade -yq
+  - cd /opt/linux-src/ ; git pull ; cd -
 
 cache:
   key: "$CI_PROJECT_NAME-am33x-rt-v5.10"
   paths:
-    - dl/*.tar.xz
     - ccache.tar.lz4
 
 build:
@@ -12,21 +18,24 @@ build:
     - docker-amd64
   stage: build
   script:
-    - sed -i -e 's:gcc_10_arm:gcc_13_arm:g' version.sh
+    - git config --global user.email "$GITLAB_USER_EMAIL"
+    - git config --global user.name "$GITLAB_USER_NAME"
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
     - tar --use-compress-program=lz4 -xf ccache.tar.lz4 -C / || true
-    - ccache -s
-    - cp -v system.sh.sample system.sh
-    - echo "AUTO_BUILD=1" >> system.sh
-    - echo "LINUX_GIT=/mnt/yocto-cache/git/linux-src/" >> system.sh
-    - git config --global --add safe.directory /mnt/yocto-cache/git/linux-src
+    - ccache -z
+    - cp -v system.sh.gitlab system.sh
     - ./build_deb.sh
     - du -sh deploy/linux-image-*.deb || true
-    - ccache -s
+    - ccache -sv
     - tar --use-compress-program=lz4 -cf ccache.tar.lz4 /root/.cache/ccache/
-  artifacts:
-    expire_in: 28 days
-    name: "$CI_PROJECT_NAME-am33x-rt-v5.10-$CI_JOB_ID"
-    paths:
-      - "deploy/linux-image-*.deb"
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: never
+    - when: always
+#  artifacts:
+#    expire_in: 28 days
+#    when: on_success
+#    name: "$CI_PROJECT_NAME-am33x-rt-v5.10-$CI_JOB_ID"
+#    paths:
+#      - "deploy/linux-image-*.deb"
