--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,8 @@ before_script:
   - echo "Acquire::http::Proxy \"http://192.168.1.10:3142\";" > /etc/apt/apt.conf.d/00aptproxy
   - apt-get update
   - apt-get upgrade -yq
+  - apt-get dist-upgrade -yq
   - cd /opt/linux-src/ ; git pull ; cd -
-#  - pip3 install --break-system-packages --root-user-action=ignore git+https://git.gfnd.rcn-ee.org/mirror/dt-schema.git@main
-#  - dt-validate --version
 
 cache:
   key: "$CI_PROJECT_NAME-am33x-v6.11"
@@ -25,6 +24,7 @@ build:
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
     - tar --use-compress-program=lz4 -xf ccache.tar.lz4 -C / || true
+    - ccache -M 2G
     - ccache -z
     - cp -v system.sh.gitlab system.sh
     - ./build_deb.sh
