scripts: resync all build scripts
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ before_script:
   - echo "Acquire::http::Proxy \"http://192.168.1.10:3142\";" > /etc/apt/apt.conf.d/00aptproxy
   - apt-get update
   - apt-get upgrade -yq
+  - apt-get dist-upgrade -yq
   - cd /opt/linux-src/ ; git pull ; cd -
 
 cache:
@@ -23,6 +24,7 @@ build:
     - . version.sh && echo $BRANCH
     - mkdir -p /root/.cache/ccache/ || true
     - tar --use-compress-program=lz4 -xf ccache.tar.lz4 -C / || true
+    - ccache -M 2G
     - ccache -z
     - cp -v system.sh.gitlab system.sh
     - ./build_deb.sh
