--- a/patches/ref_omap2plus_defconfig
+++ b/patches/ref_omap2plus_defconfig
@@ -1,16 +1,17 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 6.11.0 Kernel Configuration
+# Linux/arm 6.12.0-rc1 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="arm-linux-gnueabi-gcc (GCC) 13.3.0"
+CONFIG_CC_VERSION_TEXT="arm-linux-gnueabi-gcc (GCC) 14.2.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=130300
+CONFIG_GCC_VERSION=140200
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
 CONFIG_AS_VERSION=24200
 CONFIG_LD_IS_BFD=y
 CONFIG_LD_VERSION=24200
 CONFIG_LLD_VERSION=0
+CONFIG_RUSTC_VERSION=0
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
 CONFIG_CC_HAS_ASM_INLINE=y
@@ -160,6 +161,7 @@ CONFIG_MEMCG=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
+CONFIG_GROUP_SCHED_WEIGHT=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_CFS_BANDWIDTH=y
 CONFIG_RT_GROUP_SCHED=y
@@ -168,6 +170,7 @@ CONFIG_SCHED_MM_CID=y
 # CONFIG_CGROUP_RDMA is not set
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
+# CONFIG_CPUSETS_V1 is not set
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_DEVICE=y
 CONFIG_CGROUP_CPUACCT=y
@@ -647,6 +650,7 @@ CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 
 CONFIG_AS_VFP_VMRS_FPINST=y
 CONFIG_CPU_MITIGATIONS=y
+CONFIG_ARCH_HAS_DMA_OPS=y
 
 #
 # General architecture-dependent options
@@ -739,6 +743,8 @@ CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 
 CONFIG_HAVE_GCC_PLUGINS=y
 CONFIG_FUNCTION_ALIGNMENT=0
+CONFIG_CC_HAS_MIN_FUNCTION_ALIGNMENT=y
+CONFIG_CC_HAS_SANE_FUNCTION_ALIGNMENT=y
 CONFIG_ARCH_NEED_CMPXCHG_1_EMU=y
 # end of General architecture-dependent options
 
@@ -752,10 +758,7 @@ CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_MODULE_SIG is not set
-CONFIG_MODULE_COMPRESS_NONE=y
-# CONFIG_MODULE_COMPRESS_GZIP is not set
-# CONFIG_MODULE_COMPRESS_XZ is not set
-# CONFIG_MODULE_COMPRESS_ZSTD is not set
+# CONFIG_MODULE_COMPRESS is not set
 # CONFIG_MODULE_ALLOW_MISSING_NAMESPACE_IMPORTS is not set
 CONFIG_MODPROBE_PATH="/sbin/modprobe"
 # CONFIG_TRIM_UNUSED_KSYMS is not set
@@ -849,7 +852,6 @@ CONFIG_COREDUMP=y
 #
 CONFIG_SWAP=y
 # CONFIG_ZSWAP is not set
-CONFIG_HAVE_ZSMALLOC=y
 CONFIG_ZSMALLOC=m
 # CONFIG_ZSMALLOC_STAT is not set
 CONFIG_ZSMALLOC_CHAIN_SIZE=8
@@ -876,7 +878,6 @@ CONFIG_FLATMEM_MANUAL=y
 CONFIG_FLATMEM=y
 CONFIG_ARCH_KEEP_MEMBLOCK=y
 CONFIG_MEMORY_ISOLATION=y
-CONFIG_SPLIT_PTLOCK_CPUS=4
 CONFIG_COMPACTION=y
 CONFIG_COMPACT_UNEVICTABLE_DEFAULT=1
 # CONFIG_PAGE_REPORTING is not set
@@ -922,6 +923,7 @@ CONFIG_NET_INGRESS=y
 CONFIG_NET_EGRESS=y
 CONFIG_NET_XGRESS=y
 CONFIG_SKB_EXTENSIONS=y
+CONFIG_NET_DEVMEM=y
 
 #
 # Networking options
@@ -1428,6 +1430,7 @@ CONFIG_BT_HCIUART_BCM=y
 # CONFIG_BT_HCIUART_QCA is not set
 # CONFIG_BT_HCIUART_AG6XX is not set
 # CONFIG_BT_HCIUART_MRVL is not set
+# CONFIG_BT_HCIUART_AML is not set
 CONFIG_BT_HCIBCM203X=m
 # CONFIG_BT_HCIBCM4377 is not set
 CONFIG_BT_HCIBPA10X=m
@@ -1618,6 +1621,7 @@ CONFIG_DEV_COREDUMP=y
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_DEBUG_TEST_DRIVER_REMOVE is not set
 # CONFIG_TEST_ASYNC_DRIVER_PROBE is not set
+CONFIG_GENERIC_CPU_DEVICES=y
 CONFIG_GENERIC_CPU_AUTOPROBE=y
 CONFIG_GENERIC_CPU_VULNERABILITIES=y
 CONFIG_SOC_BUS=y
@@ -1850,8 +1854,14 @@ CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
 CONFIG_ZRAM=m
+# CONFIG_ZRAM_BACKEND_LZ4 is not set
+# CONFIG_ZRAM_BACKEND_LZ4HC is not set
+# CONFIG_ZRAM_BACKEND_ZSTD is not set
+# CONFIG_ZRAM_BACKEND_DEFLATE is not set
+# CONFIG_ZRAM_BACKEND_842 is not set
+CONFIG_ZRAM_BACKEND_FORCE_LZO=y
+CONFIG_ZRAM_BACKEND_LZO=y
 CONFIG_ZRAM_DEF_COMP_LZORLE=y
-# CONFIG_ZRAM_DEF_COMP_ZSTD is not set
 # CONFIG_ZRAM_DEF_COMP_LZO is not set
 CONFIG_ZRAM_DEF_COMP="lzo-rle"
 CONFIG_ZRAM_WRITEBACK=y
@@ -1886,6 +1896,7 @@ CONFIG_BLK_DEV_RAM_SIZE=16384
 # CONFIG_AD525X_DPOT is not set
 # CONFIG_DUMMY_IRQ is not set
 # CONFIG_PHANTOM is not set
+# CONFIG_RPMB is not set
 # CONFIG_TIFM_CORE is not set
 # CONFIG_ICS932S401 is not set
 # CONFIG_ENCLOSURE_SERVICES is not set
@@ -2265,6 +2276,7 @@ CONFIG_NET_VENDOR_NVIDIA=y
 # CONFIG_FORCEDETH is not set
 CONFIG_NET_VENDOR_OKI=y
 # CONFIG_ETHOC is not set
+# CONFIG_OA_TC6 is not set
 CONFIG_NET_VENDOR_PACKET_ENGINES=y
 # CONFIG_HAMACHI is not set
 # CONFIG_YELLOWFIN is not set
@@ -2283,6 +2295,7 @@ CONFIG_NET_VENDOR_REALTEK=y
 # CONFIG_8139CP is not set
 # CONFIG_8139TOO is not set
 # CONFIG_R8169 is not set
+# CONFIG_RTASE is not set
 CONFIG_NET_VENDOR_RENESAS=y
 CONFIG_NET_VENDOR_ROCKER=y
 # CONFIG_ROCKER is not set
@@ -2327,7 +2340,6 @@ CONFIG_NET_VENDOR_VERTEXCOM=y
 # CONFIG_NET_VENDOR_VIA is not set
 CONFIG_NET_VENDOR_WANGXUN=y
 # CONFIG_NGBE is not set
-# CONFIG_TXGBE is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
 CONFIG_NET_VENDOR_XILINX=y
 # CONFIG_XILINX_EMACLITE is not set
@@ -2423,6 +2435,7 @@ CONFIG_CAN_C_CAN_PLATFORM=m
 # CONFIG_CAN_IFI_CANFD is not set
 # CONFIG_CAN_M_CAN is not set
 # CONFIG_CAN_PEAK_PCIEFD is not set
+# CONFIG_CAN_ROCKCHIP_CANFD is not set
 # CONFIG_CAN_SJA1000 is not set
 # CONFIG_CAN_SOFTING is not set
 
@@ -2704,7 +2717,6 @@ CONFIG_KEYBOARD_MATRIX=m
 # CONFIG_KEYBOARD_LM8323 is not set
 # CONFIG_KEYBOARD_LM8333 is not set
 # CONFIG_KEYBOARD_MAX7359 is not set
-# CONFIG_KEYBOARD_MCS is not set
 # CONFIG_KEYBOARD_MPR121 is not set
 # CONFIG_KEYBOARD_NEWTON is not set
 # CONFIG_KEYBOARD_OPENCORES is not set
@@ -2737,7 +2749,6 @@ CONFIG_TOUCHSCREEN_ATMEL_MXT=m
 # CONFIG_TOUCHSCREEN_CY8CTMA140 is not set
 # CONFIG_TOUCHSCREEN_CY8CTMG110 is not set
 # CONFIG_TOUCHSCREEN_CYTTSP_CORE is not set
-# CONFIG_TOUCHSCREEN_CYTTSP4_CORE is not set
 # CONFIG_TOUCHSCREEN_CYTTSP5 is not set
 # CONFIG_TOUCHSCREEN_DYNAPRO is not set
 # CONFIG_TOUCHSCREEN_HAMPSHIRE is not set
@@ -2762,7 +2773,6 @@ CONFIG_TOUCHSCREEN_ATMEL_MXT=m
 # CONFIG_TOUCHSCREEN_WACOM_W8001 is not set
 # CONFIG_TOUCHSCREEN_WACOM_I2C is not set
 # CONFIG_TOUCHSCREEN_MAX11801 is not set
-# CONFIG_TOUCHSCREEN_MCS5000 is not set
 # CONFIG_TOUCHSCREEN_MMS114 is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MIP4 is not set
 # CONFIG_TOUCHSCREEN_MSG2638 is not set
@@ -2959,7 +2969,6 @@ CONFIG_DEVPORT=y
 #
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
-CONFIG_I2C_COMPAT=y
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX=m
 
@@ -3007,8 +3016,7 @@ CONFIG_I2C_HELPER_AUTO=y
 # I2C system bus drivers (mostly embedded / system-on-chip)
 #
 # CONFIG_I2C_CBUS_GPIO is not set
-# CONFIG_I2C_DESIGNWARE_PLATFORM is not set
-# CONFIG_I2C_DESIGNWARE_PCI is not set
+# CONFIG_I2C_DESIGNWARE_CORE is not set
 # CONFIG_I2C_EMEV2 is not set
 # CONFIG_I2C_GPIO is not set
 # CONFIG_I2C_OCORES is not set
@@ -3055,7 +3063,6 @@ CONFIG_SPI_MEM=y
 CONFIG_SPI_BITBANG=m
 # CONFIG_SPI_CADENCE is not set
 # CONFIG_SPI_CADENCE_QUADSPI is not set
-# CONFIG_SPI_CADENCE_XSPI is not set
 # CONFIG_SPI_CH341 is not set
 # CONFIG_SPI_DESIGNWARE is not set
 CONFIG_SPI_GPIO=m
@@ -3540,6 +3547,7 @@ CONFIG_THERMAL=y
 # CONFIG_THERMAL_NETLINK is not set
 # CONFIG_THERMAL_STATISTICS is not set
 # CONFIG_THERMAL_DEBUGFS is not set
+# CONFIG_THERMAL_CORE_TESTING is not set
 CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=0
 CONFIG_THERMAL_OF=y
 CONFIG_THERMAL_DEFAULT_GOV_STEP_WISE=y
@@ -3616,6 +3624,7 @@ CONFIG_BCMA_POSSIBLE=y
 # Multifunction device drivers
 #
 CONFIG_MFD_CORE=y
+# CONFIG_MFD_ADP5585 is not set
 # CONFIG_MFD_ACT8945A is not set
 # CONFIG_MFD_AS3711 is not set
 # CONFIG_MFD_SMPRO is not set
@@ -3864,6 +3873,7 @@ CONFIG_CEC_CORE=m
 # CONFIG_MEDIA_CEC_RC is not set
 CONFIG_MEDIA_CEC_SUPPORT=y
 # CONFIG_CEC_CH7322 is not set
+# CONFIG_USB_EXTRON_DA_HD_4K_PLUS_CEC is not set
 # CONFIG_USB_PULSE8_CEC is not set
 # CONFIG_USB_RAINSHADOW_CEC is not set
 # end of CEC support
@@ -3980,7 +3990,6 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 #
 # Chips&Media media platform drivers
 #
-# CONFIG_VIDEO_E5010_JPEG_ENC is not set
 
 #
 # Intel media platform drivers
@@ -4018,7 +4027,6 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 #
 # Raspberry Pi media platform drivers
 #
-# CONFIG_VIDEO_RASPBERRYPI_PISP_BE is not set
 
 #
 # Renesas media platform drivers
@@ -4524,6 +4532,7 @@ CONFIG_DRM=m
 CONFIG_DRM_MIPI_DSI=y
 # CONFIG_DRM_DEBUG_MM is not set
 CONFIG_DRM_KMS_HELPER=m
+# CONFIG_DRM_PANIC is not set
 # CONFIG_DRM_DEBUG_DP_MST_TOPOLOGY_REFS is not set
 # CONFIG_DRM_DEBUG_MODESET_LOCK is not set
 CONFIG_DRM_FBDEV_EMULATION=y
@@ -4597,6 +4606,7 @@ CONFIG_DRM_PANEL=y
 # CONFIG_DRM_PANEL_BOE_HIMAX8279D is not set
 # CONFIG_DRM_PANEL_BOE_TH101MB31UIG002_28A is not set
 # CONFIG_DRM_PANEL_BOE_TV101WUM_NL6 is not set
+# CONFIG_DRM_PANEL_BOE_TV101WUM_LL2 is not set
 # CONFIG_DRM_PANEL_EBBG_FT8719 is not set
 # CONFIG_DRM_PANEL_ELIDA_KD35T133 is not set
 # CONFIG_DRM_PANEL_FEIXIN_K101_IM2BA02 is not set
@@ -4905,7 +4915,6 @@ CONFIG_SND_PCM_TIMER=y
 CONFIG_SND_SUPPORT_OLD_API=y
 CONFIG_SND_PROC_FS=y
 CONFIG_SND_VERBOSE_PROCFS=y
-CONFIG_SND_VERBOSE_PRINTK=y
 CONFIG_SND_CTL_FAST_LOOKUP=y
 CONFIG_SND_DEBUG=y
 # CONFIG_SND_DEBUG_VERBOSE is not set
@@ -4913,6 +4922,7 @@ CONFIG_SND_DEBUG=y
 # CONFIG_SND_CTL_INPUT_VALIDATION is not set
 # CONFIG_SND_CTL_DEBUG is not set
 # CONFIG_SND_JACK_INJECTION_DEBUG is not set
+# CONFIG_SND_UTIMER is not set
 # CONFIG_SND_SEQUENCER is not set
 CONFIG_SND_DRIVERS=y
 # CONFIG_SND_DUMMY is not set
@@ -5253,6 +5263,7 @@ CONFIG_SND_SOC_TWL6040=m
 # CONFIG_SND_SOC_ZL38060 is not set
 # CONFIG_SND_SOC_MAX9759 is not set
 # CONFIG_SND_SOC_MT6351 is not set
+# CONFIG_SND_SOC_MT6357 is not set
 # CONFIG_SND_SOC_MT6358 is not set
 # CONFIG_SND_SOC_MT6660 is not set
 # CONFIG_SND_SOC_NAU8315 is not set
@@ -5314,6 +5325,7 @@ CONFIG_HID_GENERIC=m
 # CONFIG_HID_GFRM is not set
 # CONFIG_HID_GLORIOUS is not set
 # CONFIG_HID_HOLTEK is not set
+# CONFIG_HID_GOODIX_SPI is not set
 # CONFIG_HID_GOOGLE_STADIA_FF is not set
 # CONFIG_HID_VIVALDI is not set
 # CONFIG_HID_GT683R is not set
@@ -5940,6 +5952,7 @@ CONFIG_RTC_DRV_PALMAS=m
 # CONFIG_RTC_DRV_RV3028 is not set
 # CONFIG_RTC_DRV_RV3032 is not set
 # CONFIG_RTC_DRV_RV8803 is not set
+# CONFIG_RTC_DRV_SD2405AL is not set
 # CONFIG_RTC_DRV_SD3078 is not set
 
 #
@@ -6019,6 +6032,7 @@ CONFIG_DMA_OF=y
 # CONFIG_XILINX_DMA is not set
 # CONFIG_XILINX_XDMA is not set
 # CONFIG_XILINX_ZYNQMP_DPDMA is not set
+# CONFIG_AMD_QDMA is not set
 # CONFIG_QCOM_HIDMA_MGMT is not set
 # CONFIG_QCOM_HIDMA is not set
 # CONFIG_DW_DMAC is not set
@@ -6129,7 +6143,6 @@ CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
 # end of Clock Source drivers
 
 CONFIG_MAILBOX=y
-# CONFIG_ARM_MHU_V3 is not set
 # CONFIG_PLATFORM_MHU is not set
 CONFIG_OMAP2PLUS_MBOX=m
 # CONFIG_ALTERA_MBOX is not set
@@ -6160,6 +6173,7 @@ CONFIG_REMOTEPROC=y
 CONFIG_OMAP_REMOTEPROC=m
 # CONFIG_OMAP_REMOTEPROC_WATCHDOG is not set
 CONFIG_WKUP_M3_RPROC=m
+# CONFIG_TI_K3_M4_REMOTEPROC is not set
 # end of Remoteproc drivers
 
 #
@@ -6262,6 +6276,7 @@ CONFIG_EXTCON=y
 # CONFIG_EXTCON_ADC_JACK is not set
 # CONFIG_EXTCON_FSA9480 is not set
 # CONFIG_EXTCON_GPIO is not set
+# CONFIG_EXTCON_LC824206XA is not set
 # CONFIG_EXTCON_MAX3355 is not set
 CONFIG_EXTCON_PALMAS=m
 # CONFIG_EXTCON_PTN5150 is not set
@@ -6304,6 +6319,8 @@ CONFIG_IIO_SW_TRIGGER=m
 # CONFIG_ADXL367_I2C is not set
 # CONFIG_ADXL372_SPI is not set
 # CONFIG_ADXL372_I2C is not set
+# CONFIG_ADXL380_SPI is not set
+# CONFIG_ADXL380_I2C is not set
 # CONFIG_BMA180 is not set
 # CONFIG_BMA220 is not set
 # CONFIG_BMA400 is not set
@@ -6342,7 +6359,9 @@ CONFIG_KXCJK1013=m
 #
 # Analog to digital converters
 #
+# CONFIG_AD4000 is not set
 # CONFIG_AD4130 is not set
+# CONFIG_AD4695 is not set
 # CONFIG_AD7091R5 is not set
 # CONFIG_AD7091R8 is not set
 # CONFIG_AD7124 is not set
@@ -6393,6 +6412,7 @@ CONFIG_INA2XX_ADC=m
 # CONFIG_MCP3564 is not set
 # CONFIG_MCP3911 is not set
 # CONFIG_NAU7802 is not set
+# CONFIG_PAC1921 is not set
 # CONFIG_PAC1934 is not set
 # CONFIG_PALMAS_GPADC is not set
 # CONFIG_RICHTEK_RTQ6056 is not set
@@ -6527,6 +6547,7 @@ CONFIG_IIO_ST_SENSORS_CORE=m
 # CONFIG_DS4424 is not set
 # CONFIG_LTC1660 is not set
 # CONFIG_LTC2632 is not set
+# CONFIG_LTC2664 is not set
 # CONFIG_M62332 is not set
 # CONFIG_MAX517 is not set
 # CONFIG_MAX5522 is not set
@@ -6612,6 +6633,7 @@ CONFIG_MPU3050_I2C=m
 #
 # CONFIG_AM2315 is not set
 # CONFIG_DHT11 is not set
+# CONFIG_ENS210 is not set
 # CONFIG_HDC100X is not set
 # CONFIG_HDC2010 is not set
 # CONFIG_HDC3020 is not set
@@ -6657,6 +6679,7 @@ CONFIG_INV_MPU6050_I2C=m
 # CONFIG_APDS9306 is not set
 # CONFIG_APDS9960 is not set
 # CONFIG_AS73211 is not set
+# CONFIG_BH1745 is not set
 # CONFIG_BH1750 is not set
 # CONFIG_BH1780 is not set
 # CONFIG_CM32181 is not set
@@ -6793,6 +6816,7 @@ CONFIG_BMP280_SPI=m
 # CONFIG_MPRLS0025PA is not set
 # CONFIG_MS5611 is not set
 # CONFIG_MS5637 is not set
+# CONFIG_SDP500 is not set
 # CONFIG_IIO_ST_PRESS is not set
 # CONFIG_T5403 is not set
 # CONFIG_HP206C is not set
@@ -6808,6 +6832,7 @@ CONFIG_BMP280_SPI=m
 #
 # Proximity and distance sensors
 #
+# CONFIG_HX9023S is not set
 # CONFIG_IRSD200 is not set
 # CONFIG_ISL29501 is not set
 # CONFIG_LIDAR_LITE_V2 is not set
@@ -6822,6 +6847,7 @@ CONFIG_BMP280_SPI=m
 # CONFIG_SRF08 is not set
 # CONFIG_VCNL3020 is not set
 # CONFIG_VL53L0X_I2C is not set
+# CONFIG_AW96103 is not set
 # end of Proximity and distance sensors
 
 #
@@ -6953,6 +6979,7 @@ CONFIG_NVMEM_LAYOUTS=y
 #
 # CONFIG_NVMEM_LAYOUT_SL28_VPD is not set
 # CONFIG_NVMEM_LAYOUT_ONIE_TLV is not set
+# CONFIG_NVMEM_LAYOUT_U_BOOT_ENV is not set
 # end of Layout Types
 
 # CONFIG_NVMEM_RMEM is not set
@@ -7220,6 +7247,9 @@ CONFIG_KEYS=y
 # CONFIG_ENCRYPTED_KEYS is not set
 # CONFIG_KEY_DH_OPERATIONS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
+CONFIG_PROC_MEM_ALWAYS_FORCE=y
+# CONFIG_PROC_MEM_FORCE_PTRACE is not set
+# CONFIG_PROC_MEM_NO_FORCE is not set
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
 # CONFIG_SECURITY_NETWORK is not set
@@ -7241,7 +7271,7 @@ CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 CONFIG_DEFAULT_SECURITY_DAC=y
-CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,bpf"
+CONFIG_LSM="landlock,lockdown,yama,loadpin,safesetid,ipe,bpf"
 
 #
 # Kernel hardening options
@@ -7565,7 +7595,9 @@ CONFIG_XZ_DEC_X86=y
 CONFIG_XZ_DEC_POWERPC=y
 CONFIG_XZ_DEC_ARM=y
 CONFIG_XZ_DEC_ARMTHUMB=y
+CONFIG_XZ_DEC_ARM64=y
 CONFIG_XZ_DEC_SPARC=y
+CONFIG_XZ_DEC_RISCV=y
 # CONFIG_XZ_DEC_MICROLZMA is not set
 CONFIG_XZ_DEC_BCJ=y
 # CONFIG_XZ_DEC_TEST is not set
@@ -7588,7 +7620,7 @@ CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT=y
 CONFIG_HAS_IOPORT_MAP=y
 CONFIG_HAS_DMA=y
-CONFIG_DMA_OPS=y
+CONFIG_DMA_OPS_HELPERS=y
 CONFIG_NEED_SG_DMA_LENGTH=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_DMA_DECLARE_COHERENT=y
@@ -7925,6 +7957,7 @@ CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_LKDTM is not set
 # CONFIG_TEST_MIN_HEAP is not set
 # CONFIG_TEST_DIV64 is not set
+# CONFIG_TEST_MULDIV64 is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_TEST_REF_TRACKER is not set
 # CONFIG_RBTREE_TEST is not set
